--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     // SMS
     implementation 'net.nurigo:sdk:4.3.2'
 
+    // Redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
