test: 테스트 환경에 s3 테스트용 설정값 세팅

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -19,3 +19,9 @@ sms:
   api_key: "a"
   api_secret: "a"
   send_number: "01012345678"
+
+cloud:
+  aws:
+    credentials:
+      access-key: "test"
+      secret-key: "test"
