test: test jwt key 세팅

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -27,5 +27,5 @@ cloud:
       secret-key: "test"
 
 jwt:
-  secret: "test"
+  secret: "testtesttesttesttesttesttesttesttesttesttestestset"
   expiration_time: 108000000
