feat: 요양보호사 로그인 API 작성 (#34)
* feat: 요양보호사 로그인 기능 구현

* chore: swagger 테스트를 위한 인증 필드 추가

* test: test jwt key 세팅

* docs: 요양복지사 로그인 API 설명 기입

* chore: 기존 스웨거 메세지 오타 수정

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -25,3 +25,7 @@ cloud:
     credentials:
       access-key: "test"
       secret-key: "test"
+
+jwt:
+  secret: "testtesttesttesttesttesttesttesttesttesttestestset"
+  expiration_time: 108000000
