--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -5,7 +5,7 @@ spring:
     url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=false;MODE=MYSQL; # NON_KEYWORDS=YEAR,ORDER
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
@@ -14,6 +14,32 @@ spring:
     redis:
       host: "localhost"
       port: "6379"
+
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-name: kakao
+            client-id: aa
+            redirect-uri: aa
+            authorization-grant-type: authorization_code
+            scope:
+              - profile_nickname
+              - name
+              - gender
+              - birthday
+              - birthyear
+              - phone_number
+
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+
+
 
 sms:
   api_key: "a"
@@ -28,4 +54,17 @@ cloud:
 
 jwt:
   secret: "testtesttesttesttesttesttesttesttesttesttestestset"
-  expiration_time: 108000000
+  expiration_time:
+    access_token: 86400
+    refresh_token: 604800
+
+
+login:
+  redirect_url:
+    guest: aaa
+
+cookie:
+  secure: false
+  samesite: Lax
+
+
