--- a/.github/workflows/develop-pr-test.yml
+++ b/.github/workflows/develop-pr-test.yml
@@ -28,4 +28,4 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Test with Gradle Wrapper
-        run: ./gradlew test
+        run: ./gradlew check
