refract: 요양보호사 회원가입 플로우 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,7 +34,8 @@ server:
 login:
   redirect_url:
     guest: "${LOGIN_REDIRECT_URL_GUEST}"
-    user: "${LOGIN_REDIRECT_URL_USER}"
+    social_worker: "${LOGIN_REDIRECT_URL_SOCIAL_WORKER}"
+    caregiver: "${LOGIN_REDIRECT_URL_CAREGIVER}"
 
 cookie:
   secure: "${COOKIE_SECURE}"
