--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -59,7 +59,8 @@ jwt:
 login:
   redirect_url:
     guest: aaa
-    user: aaa
+    social_worker: aaa
+    caregiver: aaa
 
 cookie:
   secure: false
