--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,7 @@ spotless {
         removeUnusedImports()
         palantirJavaFormat()
         formatAnnotations()
+        importOrder()
     }
 
     yaml {
