--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -42,7 +42,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_IMAGE_TAG }}
+          tags: ${{ secrets.PROD_DOCKER_IMAGE_TAG }}
 
       # Deploy
       - name: Access to EC2
