S3 기능 전반 개선: Presigned URL, temp→permanent 이동, 스케줄러
- 프론트에서 temp 폴더로 직접 업로드 가능 (URL 만료 3분)
- 엔티티 등록/수정 시 프로필 이미지 temp→permanent 이동
- moveTempFileToPermanent() 실패 시 예외 발생, 트랜잭션 롤백
- 도메인별 S3 구조: temp/permanent/default
- 하루 1회 스케줄러로 temp 오래된 파일, orphan permanent 파일 삭제
- S3Util 재사용성 향상 (key/url 생성, 파일 삭제 helper)

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -65,3 +65,10 @@ login:
 cookie:
   secure: false
   samesite: Lax
+
+aws:
+  s3:
+    bucket: aaa
+    base-url: aaa
+    access-key: aaa
+    secret-key: aaa
