--- a/src/main/resources/application-s3.yml
+++ b/src/main/resources/application-s3.yml
@@ -1,5 +1,6 @@
-cloud:
-  aws:
-    credentials:
-      access-key: "${S3_ACCESS_KEY}"
-      secret-key: "${S3_SECRET_KEY}"
+aws:
+  s3:
+    bucket: "${S3_BUCKET}"
+    base-url: "${S3_BASE_URL}"
+    access-key: "${S3_ACCESS_KEY}"
+    secret-key: "${S3_SECRET_KEY}"
