--- a/src/main/resources/application-s3.yml
+++ b/src/main/resources/application-s3.yml
@@ -4,3 +4,5 @@ aws:
     base-url: "${S3_BASE_URL}"
     access-key: "${S3_ACCESS_KEY}"
     secret-key: "${S3_SECRET_KEY}"
+    cleanup:
+      enabled: "${S3_CLEANUP_ENABLED}"
